2007-08-24 Ibou NDIAYE
Initial revision