@@ -1,2 +1,5 @@
+2007-10-30 Jerome
+Add macros for deferred rendering in report_view
+
 2007-08-24 Ibou NDIAYE
 Initial revision
